[package]
name = "php-safe-core"
version = "0.2.0"
edition = "2021"
description = "PHP底层安全处理器 - RC防护/命令拦截/文件监控/频率限制/敏感信息保护"
license = "MIT"

[lib]
name = "php_safe_core"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
