[package]
name = "php-safe-core"
version = "0.3.0"
edition = "2021"
description = "PHP security processor - RC guard, threat detection, rate limiting"
license = "MIT"

[lib]
name = "php_safe_core"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
